Add VM options to `App`
Signed-off-by: Daniel Danis <daniel.gordon.danis@protonmail.com>